# H-Bank

./: Cargo.toml  README.md
src/: api.rs  cohorts.rs  contracts.rs  data_management.rs  endpoints.rs  irb.rs  lib.rs  lib_cohorts.rs  lib_contract_structs_enums.rs  lib_contracts.rs  lib_person.rs  lib_structs_enums.rs  lib_structs_enums_OLD.rs  main.rs  persons.rs  run_script.rs
src/api/: api_endpoints.rs  app_state.rs  archive_system.rs  code_storage.rs  data_manager.rs  endpoints.rs  execution_engine.rs  interface.rs  models.rs  public_api.rs  result_processor.rs  shared_models.rs
src/cohorts/: cohort_manager.rs
src/contracts/: cohorts.rs  health_data_contract.rs  health_data_contract_claude1.rs  health_data_contract_old.rs  irb.rs  persons.rs  structs_enums.rs  structs_enums_claude1.rs  structs_enums_old.rs
src/contracts/cohorts/: cohort_manager.rs  public_api.rs  public_api_ReadMe.txt
src/contracts/persons/: individual.rs
src/data_management/: synthetic_data_generator.rs
src/endpoints/: api_endpoints.rs
src/persons/: corporation.rs  individual.rs  person.rs
src_old/: Notes.txt  lib_contracts.rs  lib_person.rs
src_original/: lib_cohorts.rs  lib_irb_forms.rs  main.rs
