[package]
name = "HBank"
version = "0.1.0"
edition = "2021"

[lib]
name = "h_bank"  # Library crate name 

[[bin]]
name = "main"
path = "bin/main.rs"

[dependencies]

serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"
tar = { version = "0.4.40" }
flate2 = { version = "1.0.30" }

rayon = "1.10.0"
dashmap = "5.5.3"
ndarray = "0.15.6"
eval-metrics = "1.0.2"
serde-pickle = "1.1.1"
classifier-measures = "0.4.3"

regex = "1.10.5"
time = "0.3.36"

actix-web = "4.8.0"
uuid = { version = "1.10.0", features = ["v4"] }